EmptyOrderDetailException Test done.